<resources>
    <string name="app_name">Authboy</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="desc_Lanceur">N\'attend pas, devient qui tu es</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_share">Paratager</string>
    <string name="authboy_mzr_desc_draw">AuthBoy Mzr</string>
    <string name="email_authboy">authboy.mzr@gmail.com</string>
    <string name="menu_discover">Decouvir</string>
    <string name="menu_favorite">Favoris</string>
    <string name="menu_share">Partager</string>
    <string name="menu_about_us">A propos de</string>
    <string name="menu_setting">Parametres</string>
    <string name="text_share_desc">envoyer lien</string>
    <string name="version_app">Version 1.0.0.Alphat01</string>
    <string name="developper">Développé par Josh_Muleshi</string>
    <string name="authboy_mzr_name_app">Authboy Mzr</string>
    <string name="view_licence_txt">View licence</string>
    <string name="twetter_icon_desc">twetter icon</string>
    <string name="linkdin_icon_desc">linkdin icon</string>
    <string name="whatsapp_icon_desc">whatsapp icon</string>
    <string name="elapsedTimeLabel_txt">0:00</string>
    <string name="remainingTimeLabel_txt">-0:00</string>
    <string name="repeat_btn">repeat btn</string>
    <string name="skip_next_btn">skip next btn</string>
    <string name="play_btn">play btn</string>
    <string name="previous_btn">previous btn</string>
    <string name="like_btn">like btn</string>
</resources>