<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_baseline_emoji_objects"
            android:title="@string/menu_discover" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/menu_share" />
    </group>
    <group>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings"
            android:title="@string/menu_setting" />

        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/ic_baseline_error"
            android:title="@string/menu_about_us" />
    </group>
</menu>